--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <main></main>
     <h1>hi there</h1>
+    <a href="sketch1/index.html">sketch 1</a>
+    <a href="sketch2/index.html">sketch 2</a>
+
 </body>
 </html>
