--- a/sketch1/index.html
+++ b/sketch1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>u think u the sh u b not even a fart</title>
+    <title>sketch1</title>
 </head>
 <body>
     <main></main>
