link to sketch3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <a href="sketch1/index.html">sketch 1</a>
     <br>
     <a href="sketch2/index.html">sketch 2</a>
+    <br>
+    <a href="sketch3/index.html">sketch 3</a>
 
 </body>
 </html>
