--- a/sketch3/index.html
+++ b/sketch3/index.html
@@ -8,14 +8,18 @@
 <body>
     <main></main>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
     <script src="sketch.js"></script>
 
 </body>
 </html>
 
-<!-- pattern match
+<!-- game1: fill in
+        each player chooses one color and must dominate 
+        the board within the set time limit
+    
+    
+     game2: pattern match
         4x4 grid (maybe grid can get bigger over time)
         each player has a designated color
         P1 has 10 seconds to create a pattern on the board
