--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <br>
     <a href="sketch2/index.html">sketch 2</a>
     <br>
-    <a href="sketch3/index.html">sketch 3</a>
+    <a href="sketch3/index.html">chloe and emma's super p5 party bash</a>
+    <br>
+    <a href="sketch4/index.html">sketch 4</a>
+
 
 </body>
 </html>
