--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <a href="sketch3/index.html">chloe and emma's super p5 party bash</a>
     <br>
     <a href="sketch4/index.html">sketch 4</a>
+    <br>
+    <a href="p5.party-main/index.html">5x5 Fill</a>
 
 
 </body>
